Add minimal and very dirty repositories viewer
