# Api/Api.yaml
@@ -46,29 +46,22 @@ paths:
               schema: 
                 $ref: '#/components/schemas/RepositoryDescriptionArray'
       security:
-      - api_key:
-        - write:lead
-        - read:lead
-  /token/:
-    post:
+      - api_key: []
+
+  /repository/{id}:
+    get:
       tags:
       - repository
-      summary: Login user and return token
-      operationId: getToken
-      requestBody:
+      summary: Get single repository
+      operationId: getRepository
+      parameters:
+      - name: id
+        in: path
+        description: Repo id
+        allowEmptyValue: false
         required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                user_name:          # <!--- form field name
-                  type: string
-                password:    # <!--- form field name
-                  type: string
-              required:
-                - user_name
-                - password
+        schema:
+          type: string
       responses:
         400:
           $ref: '#/components/responses/RequestIssue'
@@ -85,11 +78,40 @@ paths:
           content: 
             application/json: 
               schema: 
+                $ref: '#/components/schemas/RepositoryDescription'
+      security:
+      - api_key: []
+  /token/:
+    post:
+      tags:
+      - token
+      summary: Login user and return token
+      operationId: getToken
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+      responses:
+        400:
+          $ref: '#/components/responses/RequestIssue'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        403:
+          $ref: '#/components/responses/OperationNotAllowed'
+        405:
+          $ref: '#/components/responses/HttpMethodNotSupported'
+        415:
+          $ref: '#/components/responses/UnsupportedFormat'
+        200:         
+          description: Auth token
+          content: 
+            application/json: 
+              schema: 
                 $ref: '#/components/schemas/TokenResponse'
       security:
-      - api_key:
-        - write:lead
-        - read:lead
+      - api_key: []
 components:
   responses:
     RequestIssue:
@@ -108,6 +130,13 @@ components:
       description: Request used an unsupported format
       content: {}
   schemas:
+    LoginRequest:
+      type: object
+      properties:
+        password:
+          type: string
+        user_name:
+          type: string
     TokenResponse:
       type: object
       properties:
